# Mushroom-Classification

./: README.md  main.py  pyproject.toml  xls_to_csv.py
dataset/: mushroom_cleaned.csv
models/: best_xgb_model.pkl
src/: data.py  eda.py  evaluate.py  features.py  model.py  preprocessing.py  transform.py
