[project]
name = "mushroom_classification"
version = "0.1.0"
description = ""
authors = [
    {name = "math1p0027",email = "math1p0027@math.uoc.gr"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "mlxtend (>=0.24.0,<0.25.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
